<resources>
    <string name="app_name">DICE</string>
    <string name="dice">DICE</string>
    <string name="a_minimalistic_dice_roll_app">A minimalistic dice roll app</string>
    <string name="get_started">get started</string>
    <string name="dice1">Dice1</string>
    <string name="dice2">Dice2</string>
    <string name="roll">Roll</string>
    <string name="about">About</string>
    <string name="rate_us">Rate us</string>
    <string name="share_bug_report">Share Bug Report</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_simple_intuitive_minimalistic_and_ad_free_dice_roll_application">DICE is a minimalistic, intuitive and an ad-free dice roll application with which you can play your favorite board games.</string>
    <string name="banner">banner</string>
    <string name="choose_your_dice_s_board">Choose your dice(s) board :</string>
    <string name="one">One</string>
    <string name="diceone_imageview">diceOne_imageView</string>
    <string name="suitable_for_single_player_board_games">Suitable for single-player board games</string>
    <string name="two">Two</string>
    <string name="suitable_for_multi_player_board_games">Suitable for multi-player board games</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="play">Play</string>
    <string name="dicetwo_imageview">diceTwo_imageView</string>
    <string name="dicethree_imageview">diceThree_imageView</string>
    <string name="dicefour_imageview">diceFour_imageView</string>
    <string name="dice3">dice3</string>
    <string name="dice4">dice4</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="nos_of_dice">No of dice(s) on the board</string>
    <string name="log_out">Log Out</string>
</resources>