<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dev.shreyansh.dice.viewModel.DiceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#d8d8d8"
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.game.BoardThreeFragment">

        <ImageView
            android:id="@+id/dice1_imageView"
            android:layout_width="@dimen/dimen_200"
            android:layout_height="@dimen/dimen_200"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/dimen_80"
            android:contentDescription="@string/dice1"
            app:imageResource="@{viewModel.dice1}"
            app:layout_constraintBottom_toTopOf="@+id/dice3_imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dice2_imageView"
            android:layout_width="@dimen/dimen_200"
            android:layout_height="@dimen/dimen_200"
            android:layout_marginTop="@dimen/dimen_80"
            android:contentDescription="@string/dice2"
            app:imageResource="@{viewModel.dice2}"
            app:layout_constraintBottom_toTopOf="@+id/dice3_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dice1_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dice3_imageView"
            android:layout_width="@dimen/dimen_200"
            android:layout_height="@dimen/dimen_200"
            android:layout_marginBottom="@dimen/dimen_16"
            android:contentDescription="@string/dice3"
            app:imageResource="@{viewModel.dice3}"
            app:layout_constraintBottom_toTopOf="@+id/roll_button"
            app:layout_constraintEnd_toStartOf="@+id/dice4_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dice4_imageView"
            android:layout_width="@dimen/dimen_200"
            android:layout_height="@dimen/dimen_200"
            android:layout_marginBottom="@dimen/dimen_16"
            android:contentDescription="@string/dice4"
            app:imageResource="@{viewModel.dice4}"
            app:layout_constraintBottom_toTopOf="@+id/roll_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dice1_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:visibility="invisible"
            android:id="@+id/confetti"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/roll_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/confetti" />

        <ImageView
            android:id="@+id/resultImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="resultImageView"
            app:imageResource="@{viewModel.result}"
            app:layout_constraintBottom_toTopOf="@+id/roll_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/confetti" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/roll_button"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/dimen_56"
            android:layout_marginEnd="@dimen/dimen_56"
            android:layout_marginBottom="@dimen/dimen_24"
            android:text="@string/roll"
            android:textColor="@color/white"
            app:backgroundTint="@color/dark_grey"
            app:cornerRadius="@dimen/dimen_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>