<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="dev.shreyansh.dice.viewModel.DiceViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/prefsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            tools:context=".ui.PrefsFragment">

            <TextView
                android:id="@+id/select_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_32"
                android:fontFamily="@font/montserrat"
                android:text="@string/choose_your_dice_s_board"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_one"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_120"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_16"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#F9DCC4"
                app:cardCornerRadius="@dimen/dimen_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_textView">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cardOne_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24"
                        android:layout_marginTop="@dimen/dimen_24"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/one"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/diceOneImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:contentDescription="@string/diceone_imageview"
                        android:src="@drawable/one"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cardOneTagline_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:text="@string/suitable_for_single_player_board_games"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/dimen_12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardOne_textview" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_two"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_120"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#FEC89A"
                app:cardCornerRadius="@dimen/dimen_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_one">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cardTwo_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24"
                        android:layout_marginTop="@dimen/dimen_24"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/two"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/diceTwo_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:contentDescription="@string/dicetwo_imageview"
                        android:src="@drawable/two"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cardTwoTagline_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:text="@string/suitable_for_multi_player_board_games"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/dimen_12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardTwo_textview" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_three"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_120"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#FCD5CE"
                app:cardCornerRadius="@dimen/dimen_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_two">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cardThree_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24"
                        android:layout_marginTop="@dimen/dimen_24"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/three"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/diceThree_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:contentDescription="@string/dicethree_imageview"
                        android:src="@drawable/three"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cardThreeTagline_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:text="@string/suitable_for_multi_player_board_games"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/dimen_12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardThree_textview" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_four"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_120"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#FFB5A7"
                app:cardCornerRadius="@dimen/dimen_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_three">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cardFour_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24"
                        android:layout_marginTop="@dimen/dimen_24"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/four"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/diceFour_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:contentDescription="@string/dicefour_imageview"
                        android:src="@drawable/four"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cardFourTagline_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_24"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:text="@string/suitable_for_multi_player_board_games"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/dimen_12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardFour_textview" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_button"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="@dimen/dimen_64"
                android:layout_marginStart="@dimen/dimen_48"
                android:layout_marginEnd="@dimen/dimen_48"
                android:layout_marginBottom="@dimen/dimen_24"
                android:fontFamily="@font/montserrat"
                android:onClick="@{() -> viewModel.onGameStart()}"
                android:text="@string/play"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/dimen_32"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>