<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="dev.shreyansh.dice.viewModel.DiceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/introLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.intro.IntroFragment">

        <TextView
            android:id="@+id/appname_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_48"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/dice"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.700" />

        <TextView
            android:id="@+id/tagline_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/dimen_16"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="true"
            android:text="@string/a_minimalistic_dice_roll_app"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appname_textView"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/dimen_48"
            android:layout_marginEnd="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/dimen_24"
            android:drawableLeft="@drawable/ic_google"
            android:fontFamily="@font/montserrat"
            android:onClick="@{() -> viewModel.onGameIntro()}"
            android:text="LOGIN   "
            android:textSize="16sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/dimen_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/loadingTicketProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="42dp"
            android:elevation="4dp"
            android:indeterminateTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.700"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="480dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/banner"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/banner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>